# dR_c

./: 1.txt  2.txt  CMakeLists.txt  README.md
dR_c(浮点数版本)/: .gitignore  CMakeLists.txt  README.md
dR_c(浮点数版本)/inc/: cnn.h  config.h  typedef.h
dR_c(浮点数版本)/src/: cnn.c  imageIO.c  main.c  recognizer.c
inc/: cnn.h  config.h  imageIO.h  mat.h  recognizer.h  typedef.h  weight.h
model_weight_BK_20170308/: binary0DQ_conv_b33.h  binary0DQ_conv_weight33.h  binary0DQ_fc1_b.h  binary0DQ_fc1_weight.h  binary0DQ_fc2_b.h  binary0DQ_fc2_weight.h  binary56_conv_b33.h  binary56_conv_weight33.h  binary56_fc1_b.h  binary56_fc1_weight.h  binary56_fc2_b.h  binary56_fc2_weight.h  binary8B_conv_b33.h  binary8B_conv_weight33.h  binary8B_fc1_b.h  binary8B_fc1_weight.h  binary8B_fc2_b.h  binary8B_fc2_weight.h  conv_b33.h  conv_b55.h  conv_b77.h  conv_weight33.h  conv_weight55.h  conv_weight77.h  digit10_int_weight0.h  digit10_int_weight1.h  digit10_int_weight2.h  digit10_int_weight3.h  digit10_int_weight4.h  digit10_int_weight5.h  fc1_b.h  fc1_weight.h  fc2_b.h  fc2_weight.h  letter0D_int_weight0.h  letter0D_int_weight1.h  letter0D_int_weight2.h  letter0D_int_weight3.h  letter0D_int_weight4.h  letter0D_int_weight5.h  (+18 more)
src/: cnn.c  imageIO.c  main.c  mat.c  recognizer.c
